updated backend env for admin frontend vercel file

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = 'https://leparadigme.onrender.com'
+VITE_BACKEND_URL = 'https://leparadigme-backend.onrender.com'
 VITE_RAZORPAY_KEY_ID = '------ Razorpay Key Id here ------'
