--- a/admin/.env
+++ b/admin/.env
@@ -1,2 +1,2 @@
 VITE_CURRENCY = '$'
-VITE_BACKEND_URL = 'https://leparadigme.onrender.com'
+VITE_BACKEND_URL = 'https://leparadigme-backend.onrender.com'
